--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
 					</a>
 					<div class="collapse" id="transfersCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
-							<li class="nav-item"><a class="nav-link" href="/TransferOrders/Index"><span class="nav-text">Transfer Orders</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/TransferOrder/Index"><span class="nav-text">Transfer Orders</span></a></li>
 						</ul>
 					</div>
 				</li>
