--- a/WMS_DEPI_GRAD/Views/Aisle/Details.cshtml
+++ b/WMS_DEPI_GRAD/Views/Aisle/Details.cshtml
@@ -36,11 +36,14 @@
 
                     <hr class="text-muted opacity-25 my-4">
 
-                    <div class="d-flex justify-content-end">
-                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary px-4">
-                            <i class="fas fa-edit me-2"></i>Edit Aisle
-                        </a>
-                    </div>
+                    @if (User.IsInRole("Admin") || User.IsInRole("WarehouseManager"))
+                    {
+                        <div class="d-flex justify-content-end">
+                            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary px-4">
+                                <i class="fas fa-edit me-2"></i>Edit Aisle
+                            </a>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
