--- a/WMS_DEPI_GRAD/Views/Bin/Details.cshtml
+++ b/WMS_DEPI_GRAD/Views/Bin/Details.cshtml
@@ -42,7 +42,9 @@
             </dl>
         </div>
         <div class="card-footer">
-            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+            @if (User.IsInRole("Admin") || User.IsInRole("WarehouseManager")){
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+            }
             <a asp-action="Index" class="btn btn-secondary">Back to List</a>
         </div>
     </div>
