--- a/WMS_DEPI_GRAD/Views/Putaway/Details.cshtml
+++ b/WMS_DEPI_GRAD/Views/Putaway/Details.cshtml
@@ -144,14 +144,16 @@
             }
             else if (Model.Status == WMS.DAL.PutawayStatus.Assigned)
             {
-                <a asp-action="Execute" asp-route-id="@Model.PutawayId" class="btn btn-success btn-lg me-2">
-                    <i class="bi bi-check-circle"></i> Execute Putaway
-                </a>
+                @if(User.IsInRole("Admin")){
+                    <a asp-action="Execute" asp-route-id="@Model.PutawayId" class="btn btn-success btn-lg me-2">
+                        <i class="bi bi-check-circle"></i> Execute Putaway
+                    </a>
+                }
                 <a asp-action="AssignManual" asp-route-id="@Model.PutawayId" class="btn btn-warning btn-lg">
                     <i class="bi bi-pencil"></i> Edit Assignment
                 </a>
             }
-            else if (Model.Status == WMS.DAL.PutawayStatus.Completed)
+            else if (Model.Status == WMS.DAL.PutawayStatus.Completed && User.IsInRole("Admin"))
             {
                 <form asp-action="Close" asp-route-id="@Model.PutawayId" method="post" class="d-inline">
                     @Html.AntiForgeryToken()
