--- a/WMS_DEPI_GRAD/Views/Warehouse/Details.cshtml
+++ b/WMS_DEPI_GRAD/Views/Warehouse/Details.cshtml
@@ -47,9 +47,12 @@
                     <hr class="text-muted opacity-25 my-4">
 
                     <div class="d-flex justify-content-end">
-                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary px-4">
-                            <i class="fas fa-edit me-2"></i>Edit Warehouse
-                        </a>
+                        @if (User.IsInRole("Admin") || User.IsInRole("WarehouseManager"))
+                        {
+                            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary px-4">
+                                <i class="fas fa-edit me-2"></i>Edit Warehouse
+                            </a>
+                        }
                     </div>
                 </div>
             </div>
