--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -91,19 +91,20 @@
 					</a>
 					<div class="collapse" id="inventoryCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
-							@if(User.IsInRole("Admin") || User.IsInRole("Storekeeper")){
-								<li class="nav-item"><a class="nav-link" href="/Inventory/Index"><span class="nav-text">Inventory List</span></a></li>
-							}
 							@if (User.IsInRole("Admin") || User.IsInRole("InboundSpecialist"))
 							{
 							    <li class="nav-item"><a class="nav-link" href="/Putaway/Index"><span class="nav-text">Putaway</span></a></li>
+							}
+							@if(User.IsInRole("Admin") || User.IsInRole("Storekeeper")){
+								<li class="nav-item"><a class="nav-link" href="/Inventory/Index"><span class="nav-text">Inventory List</span></a></li>
 							}
 						</ul>
 					</div>
 				</li>
 
 				<!-- Orders / Sales -->
-				<li class="nav-item">
+				@if(User.IsInRole("Admin") || User.IsInRole("Picker") || User.IsInRole("Storekeeper") || User.IsInRole("SalesManager")){
+					<li class="nav-item">
 					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#salesCollapse">
 						<i class="fas fa-truck-arrow-right nav-icon"></i>
 						<span class="nav-text">Orders / Sales</span>
@@ -111,11 +112,19 @@
 					</a>
 					<div class="collapse" id="salesCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
-							<li class="nav-item"><a class="nav-link" href="/SalesOrder/Index"><span class="nav-text">Sales Orders</span></a></li>
+								@if (User.IsInRole("Admin") || User.IsInRole("Storekeeper") || User.IsInRole("SalesManager"))
+								{
+									<li class="nav-item"><a class="nav-link" href="/SalesOrder/Index"><span class="nav-text">Sales Orders</span></a></li>
+							}
+								@if (User.IsInRole("Admin") || User.IsInRole("Picker"))
+								{
+
 							<li class="nav-item"><a class="nav-link" href="/Picking/Index"><span class="nav-text">Picking</span></a></li>
+							}
 						</ul>
 					</div>
 				</li>
+				}
 
 				<!-- Transfers -->
 				<li class="nav-item">
