--- a/WMS_DEPI_GRAD/Views/Putaway/Details.cshtml
+++ b/WMS_DEPI_GRAD/Views/Putaway/Details.cshtml
@@ -135,9 +135,9 @@
         <div class="card-body text-center">
             @if (Model.Status == WMS.DAL.PutawayStatus.Pending)
             {
-                @* <a asp-action="AutoAssign" asp-route-id="@Model.PutawayId" class="btn btn-primary btn-lg me-2"> *@
-                @*     <i class="bi bi-cpu"></i> Auto-Assign Bins *@
-                @* </a> *@
+                 <a asp-action="AutoAssign" asp-route-id="@Model.PutawayId" class="btn btn-primary btn-lg me-2"> 
+                     <i class="bi bi-cpu"></i> Auto-Assign Bins 
+                 </a> 
                 <a asp-action="AssignManual" asp-route-id="@Model.PutawayId" class="btn btn-secondary btn-lg">
                     <i class="bi bi-hand-index"></i> Manual Assignment
                 </a>
